--- a/locales/src/en/translation.json
+++ b/locales/src/en/translation.json
@@ -352,7 +352,7 @@
             "heading": "Enter values"
         },
         "login": {
-            "heading": "Enter your __server__ credentials",
+            "heading": "Enter your Data 123 credentials",
             "password": "Password",
             "remember": "Remember on this computer",
             "submit": "Submit",
